5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4071/executions/1668_2966.log
== TEST (2019-04-15 18:12:22) 
-- CODE:
a=input("S para mulheres ou N para nao mulheres:")
b=int(input("leia o preco:"))
c=int(input("leia a quantidade:"))
desconto= a*20/100


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '37.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:14:54) 
-- CODE:
a=input("S para mulheres ou N para nao mulheres:")
b=int(input("leia o preco:"))
c=int(input("leia a quantidade:"))
desconto= a*20/100
if (desconto=="S"):
	

-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:15:01) 
-- CODE:
a=input("S para mulheres ou N para nao mulheres:")
b=int(input("leia o preco:"))
c=int(input("leia a quantidade:"))
desconto= a*20/100
if (desconto=="S"):

-- ERROR:
File "XXXX", line 6
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:20:30) 
-- CODE:
a=input("S para mulheres ou N para nao mulheres:")
b=int(input("leia o preco:"))
c=int(input("leia a quantidade:"))
desconto= a*20/100
if(desconto=="S"):
	total= a - desconto
	print(round(total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '37.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:21:10) 
-- CODE:
a=int(input("S para mulheres ou N para nao mulheres:")
b=int(input("leia o preco:"))
c=int(input("leia a quantidade:"))
desconto= a*20/100
if(desconto=="S"):
	total= a - desconto
	print(round(total, 2))

-- ERROR:
File "XXXX", line 2
    b=int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:21:16) 
-- CODE:
a=int(input("S para mulheres ou N para nao mulheres:")
b=int(input("leia o preco:"))
c=int(input("leia a quantidade:"))
desconto= a*20/100
if(desconto=="S"):
	total= a - desconto
	print(round(total, 2))

-- ERROR:
File "XXXX", line 2
    b=int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:22:20) 
-- CODE:
a=input("S para mulheres ou N para nao mulheres:")
b=int(input("leia o preco:"))
c=int(input("leia a quantidade:"))
desconto= a*20/100
if(a=="S"):
	total= a - desconto
	print(round(total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '37.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:22:49) 
-- CODE:
a=input("S para mulheres ou N para nao mulheres:")
b=int(input("leia o preco:"))
c=int(input("leia a quantidade:"))
desconto= (a*20)/100
if(a=="S"):
	total= a - desconto
	print(round(total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '37.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:27:11) 
-- CODE:
a=input("S para mulheres ou N para nao mulheres:")
b=int(input("leia o preco:"))
c=int(input("leia a quantidade:"))
if(desconto=a*20/100):
	total= a - desconto
	print(round(total, 2))

-- ERROR:
File "XXXX", line 4
    if(desconto=a*20/100):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:28:37) 
-- CODE:
a=input("S para mulheres ou N para nao mulheres:")
b=int(input("leia o preco:"))
c=int(input("leia a quantidade:"))
desconto= a*20/100

if(a==desconto):
	total= a - desconto
	print(round(total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '37.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:31:05) 
-- CODE:
a=input("S para mulheres ou N para nao mulheres:")
b=int(input("leia o preco:"))
c=int(input("leia a quantidade:"))
desconto= b*20/100

if(a=="S"):
	total= a - desconto
	print(round(total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '37.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:31:25) 
-- CODE:
a=input("S para mulheres ou N para nao mulheres:")
b=int(input("leia o preco:"))
c=int(input("leia a quantidade:"))
desconto= b*20/100

if(a=="S"):
	total= b - desconto
	print(round(total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '37.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:31:30) 
-- CODE:
a=input("S para mulheres ou N para nao mulheres:")
b=int(input("leia o preco:"))
c=int(input("leia a quantidade:"))
desconto= b*20/100

if(a=="S"):
	total= b - desconto
	print(round(total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '37.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:32:36) 
-- CODE:
a=input("S para mulheres ou N para nao mulheres:")
b=int(input("leia o preco:"))
c=int(input("leia a quantidade:"))
desconto= b*20/100

if(a=="S"):
	total= b - desconto
	print(round(total, 2))
else:
	total=b
	print(round(total,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '37.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:33:58) 
-- CODE:
a=input("S para mulheres ou N para nao mulheres:")
b=int(input("leia o preco:"))
c=int(input("leia a quantidade:"))
desconto= b*20/100

if(a=="S"):
	total= b - desconto
	print(round(total, 2))
else:
	total=b
	print(round(total,2))

-- EXECUTION TIME:
0.148899
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2966/main.py", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '37.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:36:14) 
-- CODE:
a=input("S para mulheres ou N para nao mulheres:")
b=int(input("leia o preco:"))
c=int(input("leia a quantidade:"))
desconto= ((b*20)/100)/3

if(a=="S"):
	total= b - desconto
	print(round(total, 2))
else:
	total
	print(round(total,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '37.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:36:46) 
-- CODE:
a=input("S para mulheres ou N para nao mulheres:")
b=int(input("leia o preco:"))
c=int(input("leia a quantidade:"))
desconto= ((b*20)/100)*3

if(a=="S"):
	total= b - desconto
	print(round(total, 2))
else:
	total
	print(round(total,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '37.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:37:07) 
-- CODE:
a=input("S para mulheres ou N para nao mulheres:")
b=int(input("leia o preco:"))
c=int(input("leia a quantidade:"))
desconto= ((b*20)/100)

if(a=="S"):
	total= b - desconto
	print(round(total, 2))
else:
	total
	print(round(total,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '37.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:37:25) 
-- CODE:
a=input("S para mulheres ou N para nao mulheres:")
b=int(input("leia o preco:"))
c=int(input("leia a quantidade:"))
desconto= ((b*20)/100)

if(a=="S"):
	total= 3*(b - desconto)
	print(round(total, 2))
else:
	total
	print(round(total,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '37.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:37:27) 
-- CODE:
a=input("S para mulheres ou N para nao mulheres:")
b=int(input("leia o preco:"))
c=int(input("leia a quantidade:"))
desconto= ((b*20)/100)

if(a=="S"):
	total= 3*(b - desconto)
	print(round(total, 2))
else:
	total
	print(round(total,2))

-- EXECUTION TIME:
0.152547
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2966/main.py", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '37.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:37:29) 
-- CODE:
a=input("S para mulheres ou N para nao mulheres:")
b=int(input("leia o preco:"))
c=int(input("leia a quantidade:"))
desconto= ((b*20)/100)

if(a=="S"):
	total= 3*(b - desconto)
	print(round(total, 2))
else:
	total
	print(round(total,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '37.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:39:41) 
-- CODE:
a=input("S para mulheres ou N para nao mulheres:")
b=int(input("leia o preco:"))
c=int(input("leia a quantidade:"))
desconto= ((b*20)/100)
total=b-descont
if(a=="S"):
	total1=3*total
	print(round(total, 2))
else:
	total
	print(round(total,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '37.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:39:57) 
-- CODE:
a=input("S para mulheres ou N para nao mulheres:")
b=int(input("leia o preco:"))
c=int(input("leia a quantidade:"))
desconto= ((b*20)/100)
total=b-desconto
if(a=="S"):
	total1=3*total
	print(round(total, 2))
else:
	total
	print(round(total,2))

-- EXECUTION TIME:
0.143124
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2966/main.py", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '37.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:39:59) 
-- CODE:
a=input("S para mulheres ou N para nao mulheres:")
b=int(input("leia o preco:"))
c=int(input("leia a quantidade:"))
desconto= ((b*20)/100)
total=b-desconto
if(a=="S"):
	total1=3*total
	print(round(total, 2))
else:
	total
	print(round(total,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '37.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:40:46) 
-- CODE:
a=input("S para mulheres ou N para nao mulheres:")
b=int(input("leia o preco:"))
c=int(input("leia a quantidade:"))
desconto= ((b*20)/100)
if(a=="S"):
	total=b-desconto
	print(round(total, 2))
else:
	total
	print(round(total,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '37.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:45:45) 
-- CODE:
a=input("S para mulheres ou N para nao mulheres:")
b=int(input("leia o preco:"))
c=int(input("leia a quantidade:"))
total= b*3
if(total==a):
	total= b-desconto
	print(round(total, 2))
else:
	total
	print(round(total,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '37.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:46:34) 
-- CODE:
a=input("S para mulheres ou N para nao mulheres:")
b=int(input("leia o preco:"))
c=int(input("leia a quantidade:"))
total= b*3
if(total==a):
	desconto=b*20/100
	total= b-desconto
	print(round(total, 2))
else:
	total
	print(round(total,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '37.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:47:03) 
-- CODE:
a=input("S para mulheres ou N para nao mulheres:")
b=int(input("leia o preco:"))
c=int(input("leia a quantidade:"))
total= b*3
if(total==a):
	desconto=b*20/100
	total1= b-desconto
	print(round(total1, 2))
else:
	total=b
	print(round(total,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '37.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:47:19) 
-- CODE:
a=input("S para mulheres ou N para nao mulheres:")
b=int(input("leia o preco:"))
c=int(input("leia a quantidade:"))
total= b*3
if(total==a):
	desconto=b*20/100
	total1= b-desconto
	print(round(total1, 2))
else:
	total=b
	print(round(total,2))

-- EXECUTION TIME:
0.159927
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2966/main.py", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '37.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:47:44) 
-- CODE:
a=input("S para mulheres ou N para nao mulheres:")
b=int(input("leia o preco:"))
c=int(input("leia a quantidade:"))
total= b*3
if(total==a):
	desconto=b*20/100
	total1= b-desconto
	print(round(total1, 2))
else:
	total1=b
	print(round(total1,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '37.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:47:45) 
-- CODE:
a=input("S para mulheres ou N para nao mulheres:")
b=int(input("leia o preco:"))
c=int(input("leia a quantidade:"))
total= b*3
if(total==a):
	desconto=b*20/100
	total1= b-desconto
	print(round(total1, 2))
else:
	total1=b
	print(round(total1,2))

-- EXECUTION TIME:
0.184409
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2966/main.py", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '37.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:48:07) 
-- CODE:
a=input("S para mulheres ou N para nao mulheres:")
b=int(input("leia o preco:"))
c=int(input("leia a quantidade:"))
total= b*3
if(a=="S"):
	desconto=b*20/100
	total1= b-desconto
	print(round(total1, 2))
else:
	total1=b
	print(round(total1,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '37.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:48:09) 
-- CODE:
a=input("S para mulheres ou N para nao mulheres:")
b=int(input("leia o preco:"))
c=int(input("leia a quantidade:"))
total= b*3
if(a=="S"):
	desconto=b*20/100
	total1= b-desconto
	print(round(total1, 2))
else:
	total1=b
	print(round(total1,2))

-- EXECUTION TIME:
0.159873
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2966/main.py", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '37.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:50:39) 
-- CODE:
a=input("S para mulheres ou N para nao mulheres:")
b=int(input("leia o preco:"))
c=int(input("leia a quantidade:"))
total= b*3
if(a=="S"):
	desconto=b*20/100
	total1=total-desconto
	print(round(total1, 2))
else:
	total1=b
	print(round(total1,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '37.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:52:22) 
-- CODE:
a=input("S para mulheres ou N para nao mulheres:")
b=int(input("leia o preco:"))
c=int(input("leia a quantidade:"))
total= b*c
if(a=="S"):
	desconto=b*20/100
	total1=total-desconto
	print(round(total1, 2))
else:
	total1=b
	print(round(total1,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '37.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:52:35) 
-- CODE:
a=input("S para mulheres ou N para nao mulheres:")
b=int(input("leia o preco:"))
c=int(input("leia a quantidade:"))
total= b*c
if(a=="S"):
	desconto=b*20/100
	total1=total-desconto
	print(round(total1, 2))
else:
	total1=b
	print(round(total1,2))

-- EXECUTION TIME:
0.144308
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2966/main.py", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '37.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:53:44) 
-- CODE:
a=input("S para mulheres ou N para nao mulheres:")
b=int(input("leia o preco:"))
c=int(input("leia a quantidade:"))
total= b*c
if():
	desconto=b*20/100
	total1=total-desconto
	print(round(total1, 2))
else:
	total1=total
	print(round(total1,2))

-- EXECUTION TIME:
0.201979
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2966/main.py", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '37.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
